fix: windows scrollbar css

--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
 
 @layer utilities {
   body {
+    -ms-overflow-style: none;
     margin: 0;
     padding: 0;
     font-family: "Noto Sans TC", "Lusitana Normal", "Lusitana Bold", "cwTeXMing",
@@ -14,6 +15,14 @@
   }
   body::-webkit-scrollbar {
     display: none;
+    background-color: transparent;
+    width: 12px;
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color: inherit;
+    border-radius: 8px;
+    background-clip: content-box;
+    border: 2px solid transparent;
   }
   .pb-safe {
     padding-bottom: constant(safe-area-inset-bottom);
